--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "add": "^2.0.6",
     "antd": "^4.24.1",
     "apollo-link": "^1.2.14",
+    "axios": "^1.2.1",
     "caniuse-lite": "^1.0.30001418",
     "craco-less": "^1.17.1",
     "graphql": "^15.5.0",
