giang vien crud courses

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_ENDPOINT=https://tgl.mirai-chi.com/vermuda-new
 REACT_APP_LANGUAGE=en
 
-REACT_APP_API_URL=https://www.boredapi.com/api
+REACT_APP_API_URL=https://trainistar-be-azure.azurewebsites.net
