--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_ENDPOINT=https://tgl.mirai-chi.com/vermuda-new
-REACT_APP_LANGUAGE=en
+REACT_APP_ENDPOINT=https://48p1r2roz4.sse.codesandbox.io
+REACT_APP_LANGUAGE=ja
 
 REACT_APP_API_URL=https://trainistar-be-azure.azurewebsites.net
 REACT_APP_JAVA_API_URL=https://trainistar-java.azurewebsites.net
