--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "caniuse-lite": "^1.0.30001418",
     "craco-less": "^1.17.1",
     "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
