Added(FeatureStudent): Courses, Search Page

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "apollo-link": "^1.2.14",
     "axios": "^1.2.1",
     "caniuse-lite": "^1.0.30001418",
+    "classnames": "^2.3.2",
     "craco-resolve-url-loader": "^1.0.0",
+    "dayjs": "^1.11.7",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
