--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@apollo/client": "^3.3.11",
     "@craco/craco": "^6.1.1",
     "@emotion/react": "^11.1.5",
+    "@react-pdf/renderer": "2.1.1",
+    "@react-pdf/font": "2.2.0",
     "@reduxjs/toolkit": "^1.1.0",
     "@styled-system/theme-get": "^5.1.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -83,6 +85,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "@react-pdf/font": "2.2.0"
   }
 }
